cursive-bootstrap/tests/ui/E-TYP/E-TYP-1604.cursive
// RUN: compile-fail
// DIAG: E-TYP-1604
// SPEC: 8.15
// DESC: Direct field mutation through shared path without key

record Counter {
    value: i32
}

procedure mutate_shared(x: shared Counter) -> () {
    x.value = 10  //~ ERROR E-TYP-1604: direct field mutation through shared path
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
